Add RemoteNET submodule
Turn into a RemoteNET REPL


Update README.md
Remote ubuntu machine
Update RemoteNET


[RemoteNet] Update


[help-remote] Fix suggested connect usage

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     strategy:
       matrix:
-        platform: [ubuntu-latest, windows-latest]
+        platform: [windows-latest]
 
     runs-on: ${{ matrix.platform }}
 
